--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -17,65 +17,50 @@
     </article> <!-- gallery-wrap .end// -->
             </aside>
             <main class="col-md-6 border-left">
-    <article class="content-body">
- 
-    <h2 class="title">{{ single_product.product_naame }}</h2>
-    
-    <div class="mb-3"> 
-        <var class="price h4">{{ single_product.price_cash }}</var> 
-    </div> 
-    
-    <p>{{ single_product.description }}.</p>
-    
-    
-    <hr>
-        <div class="row">
-            <div class="item-option-select">
-                <h6>Choose Color</h6>
-                <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> Silver
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color" > Gray
-                  </label>
-                  <label class="btn btn-light active">
-                    <input type="radio" name="radio_color checked"> Gold
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> Black
-                  </label>
-                </div> 
-            </div>
-        </div> <!-- row.// -->
-        <div class="row">
-            <div class="item-option-select">
-                <h6>Select Size</h6>
-                <div class="btn-group btn-group-sm btn-group-toggle" data-toggle="buttons">
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> S
-                  </label>
-                  <label class="btn btn-light active">
-                    <input type="radio" name="radio_color" checked> M
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> L
-                  </label>
-                  <label class="btn btn-light">
-                    <input type="radio" name="radio_color"> XL
-                  </label>
-                </div> 
-            </div>
-        </div> <!-- row.// -->
-        <hr>
-
-        {% if single_product.stock <= 0 %}
-          <h5 class="text-danger"> Sin STOCK </h5>
-        {% else %}
-          <a href="./product-detail.html" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </a>
-        {% endif %}
+    <form action="{% url 'add_cart' single_product.id %}" method="post">
+        {% csrf_token %}  
+        <article class="content-body">
+          <h2 class="title">{{ single_product.product_naame }}</h2>
+          <div class="mb-3"> 
+              <var class="price h4">{{ single_product.price_cash }}</var> 
+          </div> 
+          
+          <p>{{ single_product.description }}.</p>
         
-    </article> <!-- product-info-aside .// -->
+        
+          <hr>
+              <div class="row">
+                  <div class="item-option-select">
+                      <h6>Choose Color</h6>
+                      <select name="color" id="color" class="form-control">
+                        <option value="" disabled selected>Escogue un Color</option>
+                        {% for i in single_product.variation_set.colors %}
+                          <option value="{{ i.variaation_value | lower }}">{{ i.variaation_value | capfirst }}</option>
+                        {% endfor %}
+                      </select>
+                  </div>
+              </div> <!-- row.// -->
+              <div class="row">
+                  <div class="item-option-select">
+                      <h6>Select Size</h6>
+                      <select name="size" id="size" class="form-control">
+                        <option value="" disabled selected>Escogue un Tamaño</option>
+                        {% for i in single_product.variation_set.sizes %}
+                          <option value="{{ i.variaation_value | lower }}">{{ i.variaation_value | capfirst }}</option>
+                        {% endfor %}
+                      </select>
+                  </div>
+              </div> <!-- row.// -->
+              <hr>
+
+              {% if single_product.stock <= 0 %}
+                <h5 class="text-danger"> Sin STOCK </h5>
+              {% else %}
+                <button type="submit" class="btn  btn-primary"> <span class="text">Add to cart</span> <i class="fas fa-shopping-cart"></i>  </button>
+              {% endif %}
+            
+        </article> <!-- product-info-aside .// -->
+    </form>
             </main> <!-- col.// -->
         </div> <!-- row.// -->
     </div> <!-- card.// -->
