--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -16,7 +16,7 @@
                  <input type="email" class="form-control" placeholder="Email Address" name="email">
               </div> <!-- form-group// -->
               <div class="form-group">
-                <input type="password" class="form-control" placeholder="Password" name="password" >
+                <input type="text" class="form-control" placeholder="Password" name="password" >
               </div> <!-- form-group// -->
               
               <div class="form-group">
