--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -4,34 +4,46 @@
 
 <section class="section-conten padding-y" style="min-height:84vh">
 
-    <!-- ============================ COMPONENT LOGIN   ================================= -->
+
+    {% if request.GET.command == 'verification' %}
+
+        <div class="container mx-auto alert alert-info text-center"  role="alert" style="max-width: 1024px; margin-top:100px;">
+            Te hemos enviado un mensaje de verificaciona tu email [{{ request.GET.email }}]
+            <br><br> 
+            Ya lo haz verificado ? <a href="{% url 'login' %}">Login</a>
+        </div>
+    {% else %}
+        <!-- ============================ COMPONENT LOGIN   ================================= -->
         <div class="card mx-auto" style="max-width: 380px; margin-top:100px;">
-          <div class="card-body">
-          <h4 class="card-title mb-4">Login Session</h4>
-          {% include 'includes/alerts.html' %}
-          {{ form.non_field_errors }}
-          <form action="{% url 'login' %}" method="POST">
-              {% csrf_token %}
-              <div class="form-group">
+            <div class="card-body">
+            <h4 class="card-title mb-4">Login Session</h4>
+            {% include 'includes/alerts.html' %}
+            {{ form.non_field_errors }}
+            <form action="{% url 'login' %}" method="POST">
+                {% csrf_token %}
+                <div class="form-group">
                  <input type="email" class="form-control" placeholder="Email Address" name="email">
-              </div> <!-- form-group// -->
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Password" name="password" >
-              </div> <!-- form-group// -->
-              
-              <div class="form-group">
-                  <a href="#" class="float-right">Olvidaste tu password?</a> 
-              </div> <!-- form-group form-check .// -->
-              <div class="form-group">
-                  <button type="submit" class="btn btn-primary btn-block"> Login  </button>
-              </div> <!-- form-group// -->    
-          </form>
-          </div> <!-- card-body.// -->
+                </div> <!-- form-group// -->
+                <div class="form-group">
+                    <input type="password" class="form-control" placeholder="Password" name="password" >
+                </div> <!-- form-group// -->
+                  
+                <div class="form-group">
+                    <a href="{% url 'forgotPassword' %}" class="float-right">Olvidaste tu password?</a> 
+                </div> <!-- form-group form-check .// -->
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary btn-block"> Login  </button>
+                </div> <!-- form-group// -->    
+            </form>
+            </div> <!-- card-body.// -->
         </div> <!-- card .// -->
     
-         <p class="text-center mt-4">Don't have account? <a href="{% url 'register' %}">Sign up</a></p>
-         <br><br> 
+        <p class="text-center mt-4">Don't have account? <a href="{% url 'register' %}">Sign up</a></p>
+        <br><br> 
     <!-- ============================ COMPONENT LOGIN  END.// ================================= -->
+    {% endif %}
+
+
     
     
     </section>
