--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -65,7 +65,7 @@
                                     <small class="title text-muted">Welcome {{ user.first_name }}</small>
                                     <div>
      
-                                        <a href="{% url 'logout' %}">Cuenta</a> <span class="dark-transp"> | </span>
+                                        <a href="{% url 'dashboard' %}">Cuenta</a> <span class="dark-transp"> | </span>
                                         <a href="{% url 'logout' %}"> Salir</a>
                                     </div>
                                 </div>
@@ -82,7 +82,7 @@
                             <a href="{%  url 'cart' %}" class="widget-header pl-3 ml-3">
                                 <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
                                     <span class="badge badge-pill badge-danger notify">
-                                        {{ cart_count }} {{ user }}
+                                        {{ cart_count }} 
                                     </span>
                             </a>
 
